# llm-langchain

./: README.md
langchain-llm/: .env.example  README.md  pyproject.toml
langchain-llm/langgraph-intro/: Dockerfile  README.md  langgraph.json  pyproject.toml
langchain-llm/langgraph-intro/misty/: misty_graph.py  misty_intro.py  misty_state.py
langchain-llm/langgraph-mcp-intro/conf/: .env.example
langchain-llm/langgraph-voice-agent/: README.md  main.py
langchain-llm/langgraph-voice-agent/mcps/: db.py  mcp_config.json
langchain-llm/langgraph-voice-agent/utils/: assistant_graph.py  voice.py
langchain-llm/learning-path-ch1/: README.md
langchain-llm/learning-path-ch1/ep1-prompt-templateing/: task_3_few_shot_template.py
langchain-llm/learning-path-ch1/ep2-multi-llms/: task_1_first_model.py  task_3_model_config.py
langchain-llm/learning-path-ch1/ep3-LCEL/: task_2_parallel_chains.py
langchain-llm/learning-path-ch1/ep4-memory-fundation/: task_1_memory_fundamentals.py  task_2_advanced_memory.py
langchain-llm/learning-path-ch1/ep5-rag/: task_2_retrieval_chain.py
langchain-llm/learning-path-ch2/ep1-langchain-fundation/: task_2_multi_model.py
langchain-llm/learning-path-ch2/ep3-vector-db/: README.md
langchain-llm/learning-path-ch2/ep4-rag/: task_3_llm_integration.py
langchain-llm/learning-path-ch2/ep5-langgraph/: task_2_creating_nodes.py
langchain-llm/learning-path/ep1-langchain-fundation/: task_3_prompt_templates.py  task_4_output_parsers.py
langchain-llm/learning-path/ep2-prompt-engineering/: README.md  task_1_zero_shot.py  task_2_one_shot.py
(+90 files in other folders)
