[project]
name = "langchain-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[google-genai]>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.23",
    "langchain-google-genai>=1.0.1",
    "langchain-openai>=0.0.6",
    "openai>=1.109.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
    "langchain-huggingface>=1.2.0",
    "chromadb>=1.5.1",
    "numpy>=2.4.2",
    "langgraph>=1.0.9",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.10.0",
    "langchain-mcp-adapters>=0.2.1",
    "mcp>=1.26.0",
    "nest-asyncio>=1.6.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
]
